images not showing fix 1

--- a/css.css
+++ b/css.css
@@ -7,7 +7,7 @@ body {
     font-size: 25px;
     overflow-x: hidden;
     background-color: #1d1b38;
-    background-image: url(/img/bg.png);
+    background-image: url(../img/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
 
